--- a/index.html
+++ b/index.html
@@ -1,193 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Job Listings</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Frontend Mentor | Job Listings</title>
+  </head>
+  <body>
+    <header></header>
+    <main>
+      <div id="filtered-cat">
+        <div id="category">
+          <h4 class="btn">
+            Frontend
+            <button class="cross-btn">
+              <img src="./images/icon-remove.svg" alt="Remove logo" />
+            </button>
+          </h4>
+          <h4 class="btn">
+            CSS
+            <button class="cross-btn">
+              <img src="./images/icon-remove.svg" alt="Remove logo" />
+            </button>
+          </h4>
+          <h4 class="btn">
+            JavaScript
+            <button class="cross-btn">
+              <img src="./images/icon-remove.svg" alt="Remove logo" />
+            </button>
+          </h4>
+          <h4 class="btn">
+            Frontend
+            <button class="cross-btn">
+              <img src="./images/icon-remove.svg" alt="Remove logo" />
+            </button>
+          </h4>
+        </div>
+        <button class="clear-btn">Clear</button>
+      </div>
+      <div id="content-container">
+        <div class="card-container">
+          <div class="job-details">
+            <img src="./images/photosnap.svg" alt="Photosnap logo" />
+            <div class="details">
+              <div class="company-info flex">
+                <h3>Photosnap</h3>
+                <div class="stat">
+                  <p class="stat-new">new!</p>
+                  <p class="stat-featured">featured</p>
+                </div>
+              </div>
+              <h2>Senior frontend developer</h2>
+              <div class="flex listed-date">
+                <p>1d ago</p>
+                <span class="round-dot"></span>
+                <p>Full time</p>
+                <span class="round-dot"></span>
+                <p>USA only</p>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="other-info-btn">
+            <button class="btn filter-btn">Frontend</button>
+            <button class="btn filter-btn">Senior</button>
+            <button class="btn filter-btn">HTML</button>
+            <button class="btn filter-btn">CSS</button>
+            <button class="btn filter-btn">Javascript</button>
+          </div>
+        </div>
+        <div class="card-container">
+          <div class="job-details">
+            <img src="./images/photosnap.svg" alt="Photosnap logo" />
+            <div class="details">
+              <div class="company-info flex">
+                <h3>Photosnap</h3>
+                <div class="stat">
+                  <p class="stat-new">new!</p>
+                  <p class="stat-featured">featured</p>
+                </div>
+              </div>
+              <h2>Senior frontend developer</h2>
+              <div class="flex listed-date">
+                <p>1d ago</p>
+                <span class="round-dot"></span>
+                <p>Full time</p>
+                <span class="round-dot"></span>
+                <p>USA only</p>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="other-info-btn">
+            <button class="btn filter-btn">Frontend</button>
+            <button class="btn filter-btn">Senior</button>
+            <button class="btn filter-btn">HTML</button>
+            <button class="btn filter-btn">CSS</button>
+            <button class="btn filter-btn">Javascript</button>
+          </div>
+        </div>
+        <div class="card-container">
+          <div class="job-details">
+            <img src="./images/photosnap.svg" alt="Photosnap logo" />
+            <div class="details">
+              <div class="company-info flex">
+                <h3>Photosnap</h3>
+                <div class="stat">
+                  <p class="stat-new">new!</p>
+                  <p class="stat-featured">featured</p>
+                </div>
+              </div>
+              <h2>Senior frontend developer</h2>
+              <div class="flex listed-date">
+                <p>1d ago</p>
+                <span class="round-dot"></span>
+                <p>Full time</p>
+                <span class="round-dot"></span>
+                <p>USA only</p>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="other-info-btn">
+            <button class="btn filter-btn">Frontend</button>
+            <button class="btn filter-btn">Senior</button>
+            <button class="btn filter-btn">HTML</button>
+            <button class="btn filter-btn">CSS</button>
+            <button class="btn filter-btn">Javascript</button>
+          </div>
+        </div>
+        <div class="card-container">
+          <div class="job-details">
+            <img src="./images/photosnap.svg" alt="Photosnap logo" />
+            <div class="details">
+              <div class="company-info flex">
+                <h3>Photosnap</h3>
+                <div class="stat">
+                  <p class="stat-new">new!</p>
+                  <p class="stat-featured">featured</p>
+                </div>
+              </div>
+              <h2>Senior frontend developer</h2>
+              <div class="flex listed-date">
+                <p>1d ago</p>
+                <span class="round-dot"></span>
+                <p>Full time</p>
+                <span class="round-dot"></span>
+                <p>USA only</p>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="other-info-btn">
+            <button class="btn filter-btn">Frontend</button>
+            <button class="btn filter-btn">Senior</button>
+            <button class="btn filter-btn">HTML</button>
+            <button class="btn filter-btn">CSS</button>
+            <button class="btn filter-btn">Javascript</button>
+          </div>
+        </div>
+      </div>
+    </main>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  <!-- Item Start -->
-  Photosnap
-  New!
-  Featured
-  Senior Frontend Developer
-  1d ago
-  Full Time
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Senior
-  <!-- Languages -->
-  HTML
-  CSS
-  JavaScript
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Manage
-  New!
-  Featured
-  Fullstack Developer
-  1d ago
-  Part Time
-  Remote
-  <!-- Role -->
-  Fullstack
-  <!-- Level -->
-  Midweight
-  <!-- Languages -->
-  Python
-  <!-- Tools -->
-  React
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Account
-  New!
-  Junior Frontend Developer
-  2d ago
-  Part Time
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  JavaScript
-  <!-- Tools -->
-  React
-  Sass
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  MyHome
-  Junior Frontend Developer
-  5d ago
-  Contract
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  CSS
-  JavaScript
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Loop Studios
-  Software Engineer
-  1w ago
-  Full Time
-  Worldwide
-  <!-- Role -->
-  Fullstack
-  <!-- Level -->
-  Midweight
-  <!-- Languages -->
-  JavaScript
-  Ruby
-  <!-- Tools -->
-  Sass
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  FaceIt
-  Junior Backend Developer
-  2w ago
-  Full Time
-  UK only
-  <!-- Role -->
-  Backend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  Ruby
-  <!-- Tools -->
-  RoR
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Shortly
-  Junior Developer
-  2w ago
-  Full Time
-  Worldwide
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  HTML
-  JavaScript
-  <!-- Tools -->
-  Sass
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Insure
-  Junior Frontend Developer
-  2w ago
-  Full Time
-  USA only
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  JavaScript
-  <!-- Tools -->
-  Vue
-  Sass
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  Eyecam Co.
-  Full Stack Engineer
-  3w ago
-  Full Time
-  Worldwide
-  <!-- Role -->
-  Fullstack
-  <!-- Level -->
-  Midweight
-  <!-- Languages -->
-  JavaScript
-  Python
-  <!-- Tools -->
-  Django
-  <!-- Item End -->
-
-  <!-- Item Start -->
-  The Air Filter Company
-  Front-end Dev
-  1mo ago
-  Part Time
-  Worldwide
-  <!-- Role -->
-  Frontend
-  <!-- Level -->
-  Junior
-  <!-- Languages -->
-  JavaScript
-  <!-- Tools -->
-  React
-  Sass
-  <!-- Item End -->
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <!-- 
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div> -->
+  </body>
 </html>
