--- a/index.html
+++ b/index.html
@@ -17,156 +17,10 @@
     <header></header>
     <main>
       <div id="filtered-cat">
-        <div id="category">
-          <h4 class="btn">
-            Frontend
-            <button class="cross-btn">
-              <img src="./images/icon-remove.svg" alt="Remove logo" />
-            </button>
-          </h4>
-          <h4 class="btn">
-            CSS
-            <button class="cross-btn">
-              <img src="./images/icon-remove.svg" alt="Remove logo" />
-            </button>
-          </h4>
-          <h4 class="btn">
-            JavaScript
-            <button class="cross-btn">
-              <img src="./images/icon-remove.svg" alt="Remove logo" />
-            </button>
-          </h4>
-          <h4 class="btn">
-            Frontend
-            <button class="cross-btn">
-              <img src="./images/icon-remove.svg" alt="Remove logo" />
-            </button>
-          </h4>
-        </div>
+        <div id="category"></div>
         <button class="clear-btn">Clear</button>
       </div>
-      <div id="content-container">
-        <div class="card-container">
-          <div class="job-details">
-            <img src="./images/photosnap.svg" alt="Photosnap logo" />
-            <div class="details">
-              <div class="company-info flex">
-                <h3>Photosnap</h3>
-                <div class="stat">
-                  <p class="stat-new">new!</p>
-                  <p class="stat-featured">featured</p>
-                </div>
-              </div>
-              <h2>Senior frontend developer</h2>
-              <div class="flex listed-date">
-                <p>1d ago</p>
-                <span class="round-dot"></span>
-                <p>Full time</p>
-                <span class="round-dot"></span>
-                <p>USA only</p>
-              </div>
-            </div>
-          </div>
-          <hr />
-          <div class="other-info-btn">
-            <button class="btn filter-btn">Frontend</button>
-            <button class="btn filter-btn">Senior</button>
-            <button class="btn filter-btn">HTML</button>
-            <button class="btn filter-btn">CSS</button>
-            <button class="btn filter-btn">Javascript</button>
-          </div>
-        </div>
-        <div class="card-container">
-          <div class="job-details">
-            <img src="./images/photosnap.svg" alt="Photosnap logo" />
-            <div class="details">
-              <div class="company-info flex">
-                <h3>Photosnap</h3>
-                <div class="stat">
-                  <p class="stat-new">new!</p>
-                  <p class="stat-featured">featured</p>
-                </div>
-              </div>
-              <h2>Senior frontend developer</h2>
-              <div class="flex listed-date">
-                <p>1d ago</p>
-                <span class="round-dot"></span>
-                <p>Full time</p>
-                <span class="round-dot"></span>
-                <p>USA only</p>
-              </div>
-            </div>
-          </div>
-          <hr />
-          <div class="other-info-btn">
-            <button class="btn filter-btn">Frontend</button>
-            <button class="btn filter-btn">Senior</button>
-            <button class="btn filter-btn">HTML</button>
-            <button class="btn filter-btn">CSS</button>
-            <button class="btn filter-btn">Javascript</button>
-          </div>
-        </div>
-        <div class="card-container">
-          <div class="job-details">
-            <img src="./images/photosnap.svg" alt="Photosnap logo" />
-            <div class="details">
-              <div class="company-info flex">
-                <h3>Photosnap</h3>
-                <div class="stat">
-                  <p class="stat-new">new!</p>
-                  <p class="stat-featured">featured</p>
-                </div>
-              </div>
-              <h2>Senior frontend developer</h2>
-              <div class="flex listed-date">
-                <p>1d ago</p>
-                <span class="round-dot"></span>
-                <p>Full time</p>
-                <span class="round-dot"></span>
-                <p>USA only</p>
-              </div>
-            </div>
-          </div>
-          <hr />
-          <div class="other-info-btn">
-            <button class="btn filter-btn">Frontend</button>
-            <button class="btn filter-btn">Senior</button>
-            <button class="btn filter-btn">HTML</button>
-            <button class="btn filter-btn">CSS</button>
-            <button class="btn filter-btn">Javascript</button>
-          </div>
-        </div>
-        <div class="card-container">
-          <div class="job-details">
-            <img src="./images/photosnap.svg" alt="Photosnap logo" />
-            <div class="details">
-              <div class="company-info flex">
-                <h3>Photosnap</h3>
-                <div class="stat">
-                  <p class="stat-new">new!</p>
-                  <p class="stat-featured">featured</p>
-                </div>
-              </div>
-              <h2>Senior frontend developer</h2>
-              <div class="flex listed-date">
-                <p>1d ago</p>
-                <span class="round-dot"></span>
-                <p>Full time</p>
-                <span class="round-dot"></span>
-                <p>USA only</p>
-              </div>
-            </div>
-          </div>
-          <hr />
-          <div class="other-info-btn">
-            <button class="btn filter-btn">Frontend</button>
-            <button class="btn filter-btn">Senior</button>
-            <button class="btn filter-btn">HTML</button>
-            <button class="btn filter-btn">CSS</button>
-            <button class="btn filter-btn">Javascript</button>
-          </div>
-        </div>
-      </div>
+      <div id="content-container"></div>
     </main>
 
     <!-- 
@@ -176,5 +30,7 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </div> -->
+    <script src="data.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
