--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
       <div id="content-container"></div>
     </main>
 
-    <!-- 
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+      >. Coded by <a href="#">Sudip Khatri</a>.
+    </div>
     <script src="data.js"></script>
     <script src="app.js"></script>
   </body>
